# saggiatore

./: .env.example  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
convex/: README.md  authHelpers.ts  batchHelpers.ts  batchRunner.ts  customEvaluations.ts  customEvaluationsHelpers.ts  customGalileoEval.ts  customGalileoEvalHelpers.ts  customGenerator.ts  customLeaderboard.ts  customMessages.ts  customOrchestrator.ts  customOrchestratorHelpers.ts  customSessions.ts  evaluations.ts  galileoEval.ts  galileoEvalHelpers.ts  http.ts  leaderboard.ts  llmClient.ts  messages.ts  modelDiscovery.ts  modelRegistry.ts  orchestrator.ts  orchestratorHelpers.ts  personas.ts  pythonSdkIngest.ts  scenarios.ts  schema.ts  seed.ts  sessions.ts  settingsAdmin.ts  tools.ts  tsconfig.tsbuildinfo
data/: personas.json  scenarios.json  tools.json
public/: site.webmanifest
python/: .env.example  PLAN.md  README.md  pyproject.toml  requirements.txt
python/saggiatore/: __init__.py  cli.py  config.py  models.py
python/saggiatore/data/: __init__.py  loader.py
python/saggiatore/evaluation/: __init__.py  callback.py  galileo_eval.py  metrics.py
python/saggiatore/orchestrator/: __init__.py  engine.py  persona.py  prompts.py  tool_simulator.py
python/saggiatore/reporting/: __init__.py  conversation.py  convex_sync.py  export.py  leaderboard.py
python/saggiatore/utils/: llm_client.py
python/tests/: test_loader.py  test_metrics.py  test_models.py  test_prompts.py
scripts/: generate-favicons.mjs  setup-galileo-scorers.ts
src/: App.tsx  (+3 more)
(+65 files in other folders)
